Updating to v1.7.0
