# src/core/integrations/express/handlers/index.ts
@@ -1,6 +1,7 @@
 export { findPage, FIND_PAGE_ROUTE } from './findPage';
 export { fetchNavigation, FETCH_NAVIGATION_ROUTE } from './fetchNavigation';
 export { fetchProjectProperties, FETCH_PROJECT_PROPERTIES_ROUTE } from './fetchProjectProperties';
+export { fetchByFilter, FETCH_BY_FILTER_ROUTE } from './fetchByFilter';
 export { findElement, FIND_ELEMENT_ROUTE } from './findElement';
 export { isPreview, IS_PREVIEW_ROUTE } from './isPreview';
 export { getAvailableLocales, GET_AVAILABLE_LOCALES_ROUTE } from './getAvailableLocales';
